--- a/dummy-django-project/Dockerfile
+++ b/dummy-django-project/Dockerfile
@@ -3,8 +3,7 @@ FROM ubuntu:16.04
 RUN apt-get update && apt-get install -y \
   python3 \
   python3-pip \
-  python3-venv \
-  tmux
+  python3-venv 
 
 RUN pip3 install django
 
