update docker file

--- a/uWSGI/with-django-nginx/Dockerfile
+++ b/uWSGI/with-django-nginx/Dockerfile
@@ -1,11 +1,6 @@
-FROM ubuntu:16.04
+FROM python:3.7
 
-RUN apt-get update && apt-get install -y \
-  python3 \
-  python3-pip \
-  python3-venv \
-  nginx \
-  vim
+RUN apt-get update && apt-get install -y nginx vim
 
 RUN pip3 install uwsgi
 RUN pip3 install django
@@ -19,6 +14,9 @@ WORKDIR /home/mysite
 RUN python3 manage.py migrate
 RUN cp /etc/nginx/uwsgi_params /home/mysite
 
-ENTRYPOINT nginx && uwsgi --socket :8001 --module mysite.wsgi && /bin/bash
+ENTRYPOINT nginx && uwsgi --socket :8001 --module mysite.wsgi
+
+# uWSGI will run in the foreground, no need to add `/bin/bash`
+# ENTRYPOINT nginx && uwsgi --socket :8001 --module mysite.wsgi && /bin/bash
 
 
